<resources>
    <string name="description_activities">Convenient weight and activity tracking system-fill out your profile and start living brightly</string>
    <string name="description_friends">Fill in the activity and weight fields,and then share the information with yor friends</string>
    <string name="remind_you">If you do not create activity in a day,then we will remind you at the specified time.</string>
    <string name="supporting_text">Are you sure want to exit? All local data will be destroyed.</string>
    <string name="already_in">I\'m already in Strava:https://www.strava.com/athletes/</string>
    <string name="description_welcome">Her you can monitor your weight and activities</string>
    <string name="notif_text">You have dont created activity during the day :(</string>
    <string name="select_elapced_activity">Add elapced time activity</string>
    <string name="activity_success_add">Activity successfully added</string>
    <string name="contact_list_permission_denied">Permission denied</string>
    <string name="has_not_created">The activity has not created yet</string>
    <string name="the_best">The best app for cyclists and runners!</string>
    <string name="contact_add_permission">Permission is allowed</string>
    <string name="dont_creat_activity">Don\'t create activity</string>
    <string name="select_date_activity">Select date activity</string>
    <string name="select_time_activity">Select time activity</string>
    <string name="continue_with_strava">Continue with Strava</string>
    <string name="lazy" translatable="false">LazyActivities</string>
    <string name="success_edit">Ваш вес удачно редактирован</string>
    <string name="unsuccess_edit">Something went wrong :(</string>
    <string name="remind_timpicker">Set the reminder time</string>
    <string name="fill_fields">Please, fill in all fields</string>
    <string name="not_connection">No internet connection</string>
    <string name="create_activity">Create a new activity</string>
    <string name="status_sms">The message has been sent</string>
    <string name="auth_canceled">Authorization  failed</string>
    <string name="language_ru" translatable="false">ru</string>
    <string name="activities_count">Activities count-</string>
    <string name="already_a_member">ALREADY A MEMBER</string>
    <string name="cache_clean">Success clean cache</string>
    <string name="cache_not_clean">Cache not clean</string>
    <string name="elevation_gain">Elevation Gain</string>
    <string name="set_check_time">Set check time</string>
    <string name="cache">Loaded feed from cache</string>
    <string name="show_app_name">show_app_name</string>
    <string name="image_welcome">image_welcome</string>
    <string name="yes_connection">Back online</string>
    <string name="choice_tel">Choice contact</string>
    <string name="notif_title">Reminder from</string>
    <string name="elapced_time">Elapsed time</string>
    <string name="welcome">Welcome to Ascent</string>
    <string name="elapse_time">Elapsed time</string>
    <string name="weight_edit">Weight(edit)</string>
    <string name="description">Description</string>
    <string name="avatarimage">avatarImage</string>
    <string name="textLogoutButton">Logout</string>
    <string name="show_number">showNumber</string>
    <string name="activities">Activities</string>
    <string name="shareButtonText">Share</string>
    <string name="add_select_value">Add</string>
    <string name="following">Following</string>
    <string name="on_alarm">Set alarm</string>
    <string name="reminder">Attention</string>
    <string name="distance">Distance</string>
    <string name="follower">Follower</string>
    <string name="messange">Message</string>
    <string name="loading">Loading…</string>
    <string name="confirm">Confirm</string>
    <string name="disable">Disable</string>
    <string name="country">Country</string>
    <string name="friends">Friends</string>
    <string name="app_name">Ascent</string>
    <string name="profile">Profile</string>
    <string name="weight">Weight</string>
    <string name="number">Number</string>
    <string name="cancel">Cancel</string>
    <string name="enable">Enable</string>
    <string name="gender">Gender</string>
    <string name="title">Title</string>
    <string name="retry">Retry</string>
    <string name="skip">Skip</string>
    <string name="okay">Okay</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="hour_">h</string>
    <string name="comma">,</string>
    <string name="not">not</string>
    <string name="yes">Yes</string>
    <string name="add">Add</string>
    <string name="km"> km</string>
    <string name="min_">m</string>
    <string name="kg"> kg</string>
    <string name="sec">s</string>
    <string name="no">No</string>

</resources>