<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/show_app_name"
            android:src="@drawable/ic_app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/skipTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/skip"
            android:textColor="@color/purple_light"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageScreen"
            android:layout_width="340dp"
            android:layout_height="320dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/image_welcome"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/image_welcome" />

        <TextView
            android:id="@+id/titleScreen"
            style="@style/Theme.AppOnboarding.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageScreen"
            tools:text="@string/welcome" />

        <TextView
            android:id="@+id/descriptionScreen"
            style="@style/Theme.AppOnboarding.Description"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintEnd_toEndOf="@id/titleScreen"
            app:layout_constraintStart_toStartOf="@id/titleScreen"
            app:layout_constraintTop_toBottomOf="@id/titleScreen"
            tools:text="@string/description_welcome" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>









