<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/colorE"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/purple_500"
        android:contentDescription="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.skillbox.ascent.utils.AppNumberPicker
        android:id="@+id/elapseSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sec"
        app:layout_constraintStart_toEndOf="@+id/min"
        app:layout_constraintBottom_toTopOf="@id/elapsedButton"
        app:layout_constraintTop_toBottomOf="@id/colorE" />

    <TextView
        android:id="@+id/min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/elapseSec"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/elapseMin"
        app:layout_constraintTop_toTopOf="parent" />

    <com.skillbox.ascent.utils.AppNumberPicker
        android:id="@+id/elapseMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/colorE"
        app:layout_constraintBottom_toTopOf="@id/elapsedButton"
        app:layout_constraintEnd_toStartOf="@+id/min"
        app:layout_constraintStart_toEndOf="@+id/hour"
        tools:layout_editor_absoluteY="88dp" />

    <TextView
        android:id="@+id/hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour_"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/elapseMin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/elapseHour"
        app:layout_constraintTop_toTopOf="parent" />

    <com.skillbox.ascent.utils.AppNumberPicker
        android:id="@+id/elapseHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        app:layout_constraintBottom_toTopOf="@id/elapsedButton"
        app:layout_constraintEnd_toStartOf="@+id/hour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorE" />

    <TextView
        android:id="@+id/sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sec"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/elapseSec"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/elapsedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:text="@string/add_select_value"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>