<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/colorD"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/purple_500"
        android:contentDescription="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.skillbox.ascent.utils.AppNumberPicker
        android:id="@+id/distanceKilometer"
        android:layout_width="102dp"
        android:layout_height="175dp"
        android:layout_marginStart="52dp"
        android:scrollbarSize="26dp"
        app:layout_constraintBottom_toTopOf="@+id/distanceButton"
        app:layout_constraintEnd_toStartOf="@+id/comma"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorD"
        app:layout_constraintVertical_bias="0.0" />

    <com.skillbox.ascent.utils.AppNumberPicker
        android:id="@+id/distanceMetre"
        android:layout_width="102dp"
        android:layout_height="175dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toTopOf="@+id/distanceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/metre"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/comma"
        app:layout_constraintTop_toBottomOf="@+id/colorD"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/comma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comma"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/distanceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorD"
        app:layout_constraintVertical_bias="0.528" />

    <TextView
        android:id="@+id/metre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/distanceMetre"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <Button
        android:id="@+id/distanceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:text="@string/add_select_value"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>